# freetype-demo

./: CMakeLists.txt
include/: shader_configure.h  text_fonts_glyphs.h
shaders/: shader_text.frag  shader_text.vert
src/: glad.c  main.cpp
